# cpp20_examples

./: README.md
module/: CMakeLists.txt  calc.ixx  main.cxx
